<resources>
    <string name="app_name">Kersho Admin</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot">Forgot Password</string>
    <string name="prompt_password">password</string>
    <string name="hint_user">Username</string>
    <string name="action_sign_in_short">Login</string>
</resources>
